[Misc] Migrate ExpandedMacroBlockTest to junit 5